@@ -1,3 +1,6 @@
+#ifndef EMULATIONDESIGNAREA_H
+#define	EMULATIONDESIGNAREA_H
+
 /*
  *  Copyright (C) 2007  Anders Gavare.  All rights reserved.
  *
@@ -24,28 +27,21 @@
  *  OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  *  SUCH DAMAGE.
  *
- *
- *  $Id: TTYDebugConsole.cc,v 1.2 2007-11-16 23:45:08 debug Exp $
+ *  $Id: EmulationDesignArea.h,v 1.1 2007-11-16 23:45:08 debug Exp $
  */
 
-#include <iostream>
+#include "misc.h"
 
-#include "TTYDebugConsole.h"
+#include <gtkmm.h>
 
-
-void TTYDebugConsole::Print(const string& str)
+class EmulationDesignArea : public Gtk::DrawingArea
 {
-	if (!GetQuiet())
-	{
-		for (int i=0; i<GetIndentation(); ++i)
-			std::cout << "  ";
-			
-		std::cout << str;
-	}
-}
+public:
+	EmulationDesignArea();
+	virtual ~EmulationDesignArea();
 
-int TTYDebugConsole::GetChar()
-{
-	return -1;
-}
+protected:
+	virtual bool on_expose_event(GdkEventExpose* event);
+};
 
+#endif	// EMULATIONDESIGNAREA_H
