@@ -1,4 +1,4 @@
-$Id: HISTORY,v 1.1645 2007-11-16 09:23:32 debug Exp $
+$Id: HISTORY,v 1.1646 2007-11-16 23:45:08 debug Exp $
 
 Changelog for GXemul:
 ---------------------
@@ -3701,3 +3701,6 @@ Changelog for GXemul:
 		Removing the old config file parser (src/emul_parse.c),
 		and doc/configfiles.html.
 		Moving remaining src/*.c{,c} into a new src/main/ directory.
+		Beginning on separating the main GUI window into a "workspace"
+		and a "debug console" area.
+20071117
